--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -24,7 +24,7 @@ section.index-2(data-scroll-id="1" full-screen)
 										br
 										| xứng tầm vị thế
 								.desc
-									p.line-height--30px Không nằm giữa trung tâm đô thị phồn hoa dự án được quy hoạch và thiết kế dành riêng cho cộng đồng dân cư thông thái yêu thích nơi sống cách biệt chốn thị thành náo nhiệt và những tiêu chuẩn sống giành riêng cho giới trí thức West Lakes Gofl & Villas được kiến tạo để đáp ứng mọi nhu cầu khắt khe của một nơi an cư xứng đáng với vị thế vượt tầm của chủ nhân thành đạt. Mỗi biệt thự thiết kế tinh tế đến từng chi tiết chính là tuyên ngôn mạnh về phong cách sống ở tầm cao khác biệt tương ứng, xứng đáng với giá trị đầu tư.
+									p Không nằm giữa trung tâm đô thị phồn hoa dự án được quy hoạch và thiết kế dành riêng cho cộng đồng dân cư thông thái yêu thích nơi sống cách biệt chốn thị thành náo nhiệt và những tiêu chuẩn sống giành riêng cho giới trí thức West Lakes Gofl & Villas được kiến tạo để đáp ứng mọi nhu cầu khắt khe của một nơi an cư xứng đáng với vị thế vượt tầm của chủ nhân thành đạt. Mỗi biệt thự thiết kế tinh tế đến từng chi tiết chính là tuyên ngôn mạnh về phong cách sống ở tầm cao khác biệt tương ứng, xứng đáng với giá trị đầu tư.
 				.swiper-slide
 					.section(data-bg="./assets/images/background/index-2.3.png")
 						.block-content.ml-at(max-width='50%' border-right data-bg="./assets/images/background/item_index-2__3.png")
