--- a/src/_templates/index/i-3.pug
+++ b/src/_templates/index/i-3.pug
@@ -22,16 +22,17 @@ section.index-3(data-scroll-id="2" data-bg="./assets/images/background/index-3.p
 				<g transform="matrix(0.998, -0.07, 0.07, 0.998, 784.302, 2445.021)">
 					<g transform="translate(53.663 0)"><rect width="904.742" height="678.337" transform="translate(0 48.707)" fill="url(#d)"/><rect width="7.2" height="51.201" transform="translate(413.156 725.386) rotate(-27)" fill="url(#e)"/><rect width="7.2" height="51.201" transform="matrix(0.5, -0.866, 0.866, 0.5, 852.821, 486.477)" fill="url(#e)"/><rect width="7.2" height="51.201" transform="matrix(0.017, -1, 1, 0.017, 899.933, 340.91)" fill="url(#e)"/><rect width="7.2" height="51.201" transform="translate(679.324 51.13) rotate(177)" fill="url(#e)"/><rect width="6.4" height="51.201" transform="translate(295.263 53.607) rotate(-165)" fill="url(#i)"/><rect width="5.6" height="51.201" transform="translate(448.51 53.94) rotate(-143)" fill="url(#i)"/><rect width="5.6" height="28" transform="translate(516.282 51.221) rotate(140)" fill="url(#i)"/><rect width="6.4" height="37.6" transform="translate(424.11 736.166) rotate(-141)" fill="#fbdd0f"/><rect width="16" height="77.601" transform="translate(186.598 715.37) rotate(18)" fill="url(#l)"/></g><rect width="16.189" height="105.228" transform="matrix(-0.829, 0.559, -0.559, -0.829, 72.264, 505.675)" fill="url(#m)"/></g><circle cx="327.115" cy="327.115" r="327.115" transform="matrix(0.848, -0.53, 0.53, 0.848, 724.837, 2702.031)" opacity="0.04" fill="url(#a)"/></g></svg>
 	.block-2
-		.container(max-width="1036px")
+		.container(max-width="1360px")
 			.block-content.mx-at
 				h3.ta-c.wow.fadeInDown(data-wow-delay=".2s") HỘI TỤ NỘI LỰC SINH LỜI NHANH
 				.list-content
 					ul.wow.fadeInDown(data-wow-delay=".2s")
 						li Chỉ cách Phú Mỹ Hưng 40 phút – Trung tâm TP.HCM 60 phút.
-						li Chuyển tiếp giữa 2 vùng động lực kinh tế cấp quốc gia và Đông Nam Bộ và Tây Nam Bộ.
 						li Thuộc vùng đô thị TP.HCM, là vùng kinh tế trọng điểm phía Nam.
-						li Nút giao thông đường bộ trọng điểm như: Quốc lộ 22, TL 822, TL 823, QLN2, Cao tốc TP.HCM – Trung Lương, Cao tốc TP.HCM – Mộc Bài, Đại lộ ven sông (Tập đoàn Tuần Châu)…
 						li Cửa ngõ phía Tây Nam của TP.HCM
+					ul.wow.fadeInDown(data-wow-delay=".2s")
+						li Chuyển tiếp giữa 2 vùng động lực kinh tế cấp quốc gia và Đông Nam Bộ và Tây Nam Bộ.
+						li Nút giao thông đường bộ trọng điểm như: Quốc lộ 22, TL 822, TL 823, QLN2, Cao tốc TP.HCM – Trung Lương, Cao tốc TP.HCM – Mộc Bài, Đại lộ ven sông (Tập đoàn Tuần Châu)…
 				.list-items-icon
 					.item.wow.fadeInLeft(data-wow-delay=".2s")
 						.icon
