--- a/src/scss/pages/index/i-2.scss
+++ b/src/scss/pages/index/i-2.scss
@@ -1,5 +1,5 @@
 .index-2 {
-	background: #dfdfdf;
+	background: map-get($mau, main);
 
 	.slider-main-index__2 {
 		position: relative;
@@ -32,15 +32,15 @@
 		}
 	}
 
-	@media (min-width: 1025px) {
-		.content {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			width: 90%;
-			transform: translate(-50%, -50%);
-			z-index: 3;
+	.content {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 90%;
+		transform: translate(-50%, -50%);
+		z-index: 3;
 
+		@media (min-width: 1025px) {
 			&[left="40%"] {
 				left: 40%;
 			}
@@ -95,7 +95,8 @@
 	}
 
 	@media (max-width: 1024.98px) {
-		height: auto;
+		height: 550px;
+		overflow-y: auto;
 
 		.slider-main-index__2 {
 			position: relative;
@@ -115,9 +116,17 @@
 			background-size: cover;
 		}
 
+		.content {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 90%;
+			transform: translate(-50%, -50%);
+			z-index: 3;
+		}
+
 		.block-content {
 			background-size: cover;
-			padding: 100px 0;
 			max-width: 100%;
 		}
 
@@ -143,6 +152,7 @@
 
 			p {
 				font-size: 16px;
+				text-align: justify;
 			}
 
 			p+p {
@@ -152,13 +162,14 @@
 	}
 
 	@media (max-width: 575.98px) {
+		height: 500px;
 
 		.block-title {
 			max-width: 80%;
-		}
 
-		.block-content {
-			padding: 35px 0 75px;
+			h2 {
+				font-size: 24px;
+			}
 		}
 
 		.desc {
@@ -172,6 +183,24 @@
 				right: unset;
 				left: 50%;
 				transform: translateX(-50%);
+			}
+		}
+
+		.sub-title {
+			text-align: left;
+			margin-top: 50px;
+			padding-bottom: 0;
+
+			&:after {
+				content: none;
+			}
+
+			h3 {
+				font-size: 16px;
+			}
+
+			p {
+				font-size: 14px;
 			}
 		}
 	}
