--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -2,6 +2,7 @@ header
 	.container.h-100
 		a(href="index.html").logo
 			img.lazyload.blur-up(data-src="./assets/logo.png", alt="WEST-LAKES")
+			img.icon-logo.lazyload.blur-up(data-src="./assets/icon-logo.png", alt="WEST-LAKES")
 		.row.no-gutters.ai-c.h-100
 			nav
 				ul
@@ -19,7 +20,6 @@ header
 						a(href="#" data-scroll-to="6") tiến độ
 					li
 						a(href="#" data-scroll-to="7") thư viện
-			.toggle-menu-mobile
 			.language
 				ul
 					li.active
