--- a/src/scss/_layouts/header.scss
+++ b/src/scss/_layouts/header.scss
@@ -18,6 +18,12 @@ header {
 		img {
 			height: 100%;
 		}
+
+		.icon-logo {
+			width: 60px;
+			height: 60px;
+			display: none;
+		}
 	}
 
 	nav {
@@ -25,7 +31,6 @@ header {
 
 		ul {
 			display: flex;
-			flex-wrap: wrap;
 			list-style-type: none;
 			padding-left: 0;
 		}
@@ -147,70 +152,23 @@ header {
 
 	.search {
 		margin-left: 10px;
+		margin-bottom: 10px;
 
 		.icon {
 			cursor: pointer;
 		}
 	}
 
-	.toggle-menu-mobile {
-		cursor: pointer;
-		position: relative;
-		display: none;
-		width: 40px;
-		height: 40px;
-		background: map-get($mau, main);
-		border-radius: 5px;
-		margin-left: auto;
-
-		&:before,
-		&:after {
-			position: absolute;
-			left: 11px;
-			width: 18px;
-			height: 2px;
-			background-color: #fff;
-			content: "";
-			transition: .3s all linear;
-		}
-
-		&:before {
-			top: 23px;
-		}
-
-		&:after {
-			top: 15px;
-		}
-
-		&.active {
-
-			&:before,
-			&:after {
-				top: 50%;
-				left: 50%;
-			}
-
-			&:before {
-				transform: translate(-50%, -50%) rotate(45deg);
-			}
-
-			&:after {
-				transform: translate(-50%, -50%) rotate(-45deg);
-			}
-		}
-	}
-
-	@media (min-width: 575.98px) {
-		&.active {
-			height: 75px;
-
-			.logo {
-				height: 80%;
-			}
-		}
-	}
-
 	@media (max-width: 1699.98px) {
+		.language {
+
+			li {
+				>a {
+					font-size: 18px;
+				}
+			}
+		}
+
 		nav {
 
 			li {
@@ -222,49 +180,13 @@ header {
 	}
 
 	@media (max-width: 1439.98px) {
-		&.active {
-			nav {
-				top: 75px;
-			}
-		}
-
-		nav {
-			position: fixed;
-			top: 100px;
-			bottom: 0;
-			left: -100%;
-			width: 75%;
-			background: #ffffff;
-			box-shadow: 0 3px 6px rgba($color: #000000, $alpha: .16);
-			transition: .3s all ease-in-out;
-
-			ul {
-				flex-direction: column;
-				margin-left: 100px;
-				margin-top: 100px;
+		.logo {
+			img {
+				display: none;
 			}
 
-			li {
-				margin-bottom: 30px;
-
-				>a {
-					&::before {
-						top: 35%;
-						left: 110%;
-						transform: translateY(-50%);
-						width: 87px;
-						height: 61px;
-						background-image: url(../assets/icons/icon-menu-hover__left.png);
-					}
-				}
-			}
-
-			li+li {
-				margin-left: 0;
-			}
-
-			&.active {
-				left: 0;
+			.icon-logo {
+				display: block;
 			}
 		}
 
@@ -273,30 +195,74 @@ header {
 		}
 	}
 
+	@media (max-width: 1199.98px) {
+		height: 75px;
+
+		.language {
+			margin-left: 5px;
+
+			li {
+				>a {
+					font-size: 16px;
+				}
+			}
+		}
+
+		nav {
+			li {
+				>a {
+					font-size: 16px;
+				}
+			}
+
+			li+li {
+				margin-left: 5px;
+			}
+		}
+
+		.search {
+			margin-left: 5px;
+
+			.icon {
+				width: 20px;
+				height: 20px;
+			}
+		}
+	}
+
 	@media (max-width: 1024.98px) {
 		nav {
+			overflow-x: auto;
+			width: 80%;
+
 			ul {
-				margin-top: 50px;
-				margin-left: 25px;
+				width: 865px;
 			}
+
+			li+li {
+				margin-left: 15px;
+			}
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		nav {
+			width: 70%;
 		}
 	}
 
 	@media (max-width: 575.98px) {
 		height: 50px;
 
-		&.active {
-			nav {
-				top: 50px;
+		.logo {
+			.icon-logo {
+				width: 35px;
+				height: 35px;
 			}
 		}
 
 		nav {
-			top: 50px;
-		}
-
-		.logo {
-			height: 70%;
+			width: 65%;
 		}
 
 		.toggle-menu-mobile {
@@ -319,22 +285,6 @@ header {
 			}
 		}
 
-		nav {
-			margin-left: auto;
-			width: 100%;
-
-			ul {
-				margin-top: 25px;
-			}
-
-			li {
-				>a {
-					font-size: 16px;
-				}
-			}
-		}
-
-
 		.language {
 			li {
 				>a {
@@ -342,5 +292,57 @@ header {
 				}
 			}
 		}
+
+		.search {
+			.icon {
+				width: 15px;
+				height: 15px;
+			}
+		}
 	}
 }
+
+
+
+
+
+
+// nav {
+// 	position: fixed;
+// 	top: 100px;
+// 	bottom: 0;
+// 	left: -100%;
+// 	width: 75%;
+// 	background: #ffffff;
+// 	box-shadow: 0 3px 6px rgba($color: #000000, $alpha: .16);
+// 	transition: .3s all ease-in-out;
+
+// 	ul {
+// 		flex-direction: column;
+// 		margin-left: 100px;
+// 		margin-top: 100px;
+// 	}
+
+// 	li {
+// 		margin-bottom: 30px;
+
+// 		>a {
+// 			&::before {
+// 				top: 35%;
+// 				left: 110%;
+// 				transform: translateY(-50%);
+// 				width: 87px;
+// 				height: 61px;
+// 				background-image: url(../assets/icons/icon-menu-hover__left.png);
+// 			}
+// 		}
+// 	}
+
+// 	li+li {
+// 		margin-left: 0;
+// 	}
+
+// 	&.active {
+// 		left: 0;
+// 	}
+// }
