--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -375,7 +375,7 @@
 			.container {
 				background-image: url(../assets/images/background/index-5.png);
 				background-size: cover;
-				position: center;
+				background-position: center;
 			}
 		}
 	}
