--- a/src/scss/_abstracts/variables.scss
+++ b/src/scss/_abstracts/variables.scss
@@ -1,1 +1,1 @@
-$mau: (main: #226439, main-1: #DCC375, main-2:#054B37);
+$mau: (main: rgb(34, 100, 57), main-1: rgb(220, 195, 117), main-2:#054B37);
