--- a/src/scss/_abstracts/animations.scss
+++ b/src/scss/_abstracts/animations.scss
@@ -106,3 +106,25 @@
 		stroke-width: 800px;
 	}
 }
+
+@keyframes fadeInOut {
+	0% {
+		opacity: 0.5;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.5;
+	}
+}
+
+@keyframes progress-bar-stripes {
+	from {
+		background-position: 1rem 0;
+	}
+
+	to {
+		background-position: 0 0;
+	}
+}
