--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -16,32 +16,32 @@ section.index-6(data-scroll-id="4" data-bg="./assets/images/background/index-6.p
 					.prioritize.mx-at(max-width='80%')
 						h3 Tối ưu chính sách thanh toán và chiết khấu cao:
 						ul
-							li
-								.icon
-									img(src="./assets/icons/icon-index-6__1.png", alt="")
+							li.wow.fadeInDown(data-wow-delay=".2s")
+								.icon.ov-h
+									img.lazyload.ofcv(data-src="./assets/icons/icon-index-6__1.png", alt="")
 								.text
 									p Chính sách thanh toán theo tiến độ trong vòng 24 tháng
-							li
-								.icon
-									img(src="./assets/icons/icon-index-6__2.png", alt="")
+							li.wow.fadeInDown(data-wow-delay=".2s")
+								.icon.ov-h
+									img.lazyload.ofcv(data-src="./assets/icons/icon-index-6__2.png", alt="")
 								.text
 									p Chính sách thanh toán sớm
 					.sale
 						h3 Khuyến mãi có một không hai:
 						ul
-							li
-								.icon
-									img(src="./assets/icons/icon-index-6__3.png", alt="")
+							li.wow.fadeInUp(data-wow-delay=".2s")
+								.icon.ov-h
+									img.lazyload.ofcv(data-src="./assets/icons/icon-index-6__3.png", alt="")
 								.text
 									p Chiết khấu ngay 5% giá trị căn biệt thự
-							li
-								.icon
-									img(src="./assets/icons/icon-index-6__4.png", alt="")
+							li.wow.fadeInUp(data-wow-delay=".3s")
+								.icon.ov-h
+									img.lazyload.ofcv(data-src="./assets/icons/icon-index-6__4.png", alt="")
 								.text
 									p Hỗ trợ hoàn thiện nhà lên đến 150TR đồng
-							li
-								.icon
-									img(src="./assets/icons/icon-index-6__5.png", alt="")
+							li.wow.fadeInUp(data-wow-delay=".4s")
+								.icon.ov-h
+									img.lazyload.ofcv(data-src="./assets/icons/icon-index-6__5.png", alt="")
 								.text
 									p Tặng ngay 1 cây vàng SJC trị giá lên đến 50TR
 	.d-none.d-n(hidden)
