cofn fixeed menu

--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -22,10 +22,10 @@ header
 						a(href="#" data-scroll-to="7") thư viện
 			.language
 				ul
-					li.active
-						a(href="#") en
-					li
-						a(href="#") vn
+					li.item.active(data-language="vn")
+						a en
+					li.item(data-language="en")
+						a vn
 			.search
 				.icon
 					img.lazyload.blur-up(data-src="./assets/icons/search.png", alt="SEARCH")
