--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -12,11 +12,11 @@ section.index-5(data-scroll-id="3" data-bg="./assets/images/background/index-5.p
 			.list-fixed-item
 				ul
 					li(data-target="matbang-1" data-bg-item="yellow")
-						h5 Biệt thự mini - 1
+						h5 Biệt thự mini
 					li(data-target="matbang-2" data-bg-item="aqua")
-						h5 Biệt thự mini - 2
+						h5 Biệt thự đơn lập
 					li(data-target="matbang-3" data-bg-item="pink")
-						h5 Biệt thự mini - 3
+						h5 Biệt thự song lập
 		.index-5-aside
 			.matbang-slide-controls
 				.map-index-4-slider-close
