--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -179,8 +179,8 @@
 				ul {
 					li {
 						.icon {
-							height: 60px;
 							width: 30%;
+							height: auto;
 							margin: 0 auto 10px;
 						}
 
