--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -53,7 +53,7 @@
 					padding-left: 20px;
 
 					li {
-						color: #111111;
+						color: #ffffff;
 						font-size: 0.85rem;
 
 						@media (min-width: 1200px) {
@@ -65,9 +65,17 @@
 						}
 					}
 
-					li + li {
+					li+li {
 						margin-top: 20px;
 					}
+				}
+			}
+		}
+
+		@media (max-width: 1024.98px) {
+			.content {
+				h2 {
+					text-align: center;
 				}
 			}
 		}
@@ -123,6 +131,8 @@
 
 				.dialog-wrapper {
 					width: 100%;
+					background: map-get($mau, main);
+					border: 2px solid map-get($mau, main-1);
 
 					h2 {
 						white-space: normal;
@@ -142,6 +152,16 @@
 				max-width: 50%;
 			}
 		}
+
+		@media (max-width: 575.98px) {
+			.dialog {
+				.dialog-wrapper {
+					h2 {
+						font-size: 10px;
+					}
+				}
+			}
+		}
 	}
 
 	.map-index-4 {
@@ -158,6 +178,7 @@
 		.imgMapCanvas {
 			width: 100%;
 			overflow: hidden;
+
 			.map-canvas {
 				position: absolute;
 				top: 0;
@@ -165,11 +186,13 @@
 				z-index: 9;
 				width: 100%;
 				height: 100%;
+
 				canvas {
 					background-position: center;
 					background-size: 100%;
 				}
 			}
+
 			.map-image {
 				position: relative;
 				opacity: 0;
@@ -301,8 +324,7 @@
 				}
 			}
 
-			@media (max-width: 1024.98px) {
-			}
+			@media (max-width: 1024.98px) {}
 		}
 
 		@media (min-width: 1025px) {
@@ -417,11 +439,9 @@
 		border-radius: 24px;
 		padding: 0 10px;
 		min-height: 48px;
-		background: linear-gradient(
-			306deg,
-			rgba(213, 184, 95, 1) 36%,
-			rgba(227, 227, 227, 1) 100%
-		);
+		background: linear-gradient(306deg,
+				rgba(213, 184, 95, 1) 36%,
+				rgba(227, 227, 227, 1) 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d5b85f", endColorstr="#e3e3e3", GradientType=1);
 
 		&:before {
