--- a/src/scss/pages/index/i-5.scss
+++ b/src/scss/pages/index/i-5.scss
@@ -52,16 +52,14 @@
 					}
 
 					&:after {
-						background-image: linear-gradient(
-							45deg,
-							rgba(255, 255, 255, 0.15) 25%,
-							transparent 25%,
-							transparent 50%,
-							rgba(255, 255, 255, 0.15) 50%,
-							rgba(255, 255, 255, 0.15) 75%,
-							transparent 75%,
-							transparent
-						);
+						background-image: linear-gradient(45deg,
+								rgba(255, 255, 255, 0.15) 25%,
+								transparent 25%,
+								transparent 50%,
+								rgba(255, 255, 255, 0.15) 50%,
+								rgba(255, 255, 255, 0.15) 75%,
+								transparent 75%,
+								transparent);
 						background-size: 1rem 1rem;
 						animation: progress-bar-stripes 1s linear infinite;
 						content: '';
@@ -102,11 +100,9 @@
 						display: flex;
 						align-items: center;
 						padding-left: 45px;
-						background: linear-gradient(
-							90deg,
-							#d5b85f,
-							rgba(0, 0, 0, 0)
-						);
+						background: linear-gradient(90deg,
+								#d5b85f,
+								rgba(0, 0, 0, 0));
 						text-transform: uppercase;
 						color: #ffffff;
 						font-size: 25px;
@@ -116,6 +112,7 @@
 					}
 
 					@media (min-width: 1025px) {
+
 						&:hover,
 						&.active {
 							h5 {
@@ -125,7 +122,7 @@
 					}
 				}
 
-				li + li {
+				li+li {
 					margin-top: 5px;
 				}
 			}
@@ -155,6 +152,7 @@
 
 		.list-fixed-item {
 			padding: 20px 0;
+
 			ul {
 				width: auto;
 				list-style-type: none;
@@ -185,6 +183,7 @@
 						border-radius: 22px;
 						color: white;
 						padding: 0 10px;
+
 						@media (max-width: 575.98px) {
 							font-size: 15px;
 						}
@@ -200,7 +199,7 @@
 					}
 				}
 
-				li + li {
+				li+li {
 					margin-top: 0;
 				}
 			}
@@ -251,6 +250,18 @@
 			}
 		}
 
+		.list-fixed-item {
+			ul {
+				li {
+					h5 {
+						padding: 0;
+						font-size: 10px;
+						min-height: 30px;
+					}
+				}
+			}
+		}
+
 		// .list-fixed-item {
 		// 	ul {
 		// 		li {
@@ -272,9 +283,11 @@
 		}
 	}
 }
+
 .index-5-main {
 	position: relative;
 }
+
 .index-5-aside {
 	@media (min-width: 1025px) {
 		position: absolute;
@@ -284,6 +297,7 @@
 		width: 100%;
 		transition: all 0.5s linear;
 	}
+
 	.matbang-slide-controls {
 		position: absolute;
 		left: 0;
@@ -338,6 +352,7 @@
 		@media (min-width: 1600px) {
 			width: 535px;
 		}
+
 		@media (max-width: 1024.98px) {
 			display: none;
 		}
@@ -349,9 +364,11 @@
 		transition: all 0.3s ease-in-out;
 		opacity: 0;
 		transition-delay: 0.05s;
+
 		&.active {
 			display: block;
 		}
+
 		&.show {
 			opacity: 1;
 		}
@@ -361,6 +378,7 @@
 		padding-left: 250px;
 		opacity: 0;
 		transform: translateX(100%);
+
 		&:before {
 			content: '';
 			position: absolute;
@@ -373,6 +391,7 @@
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 		}
+
 		&.active {
 			transform: translateX(0);
 			opacity: 1;
@@ -381,6 +400,7 @@
 
 	@media (min-width: 1200px) {
 		padding-left: 350px;
+
 		&:before {
 			width: 350px;
 		}
@@ -388,6 +408,7 @@
 
 	@media (min-width: 1440px) {
 		padding-left: 450px;
+
 		&:before {
 			width: 450px;
 		}
@@ -395,10 +416,12 @@
 
 	@media (min-width: 1600px) {
 		padding-left: 535px;
+
 		&:before {
 			width: 535px;
 		}
 	}
+
 	.swiper-container {
 		height: 100%;
 		background-color: white;
