--- a/src/scss/pages/index/i-8.scss
+++ b/src/scss/pages/index/i-8.scss
@@ -37,6 +37,12 @@
 			}
 		}
 
+		.icon {
+			height: 86px;
+			width: 75px;
+			overflow: hidden;
+		}
+
 		@media (min-width: 1200px) {
 			.icon {
 				position: absolute;
@@ -46,9 +52,6 @@
 				padding-bottom: 10px;
 				border-bottom: 1px solid #ffffff5d;
 				text-align: center;
-				height: 86px;
-				width: 75px;
-				overflow: hidden;
 			}
 
 			.text {
@@ -69,22 +72,9 @@
 	@media (max-width: 1024.98px) {
 		.list-item {
 			.icon {
-				height: 86px;
-				width: 75px;
-				overflow: hidden;
-			}
-
-			.text {
-				position: absolute;
-				left: 50%;
-				top: 50%;
-				width: 80%;
-				transform: translateX(-50%);
-
-				p {
-					font-size: 20px;
-					color: #ffffff;
-				}
+				margin: 0 auto;
+				height: 45px;
+				width: 45px;
 			}
 		}
 	}
