--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -3,6 +3,9 @@
 		.item.css-selector
 			.icon
 				img.svg(data-src="./assets/icons/view-360.svg", alt="VIEW-360")
+			.text-hover
+				h5 VIEW 360
+					sup o
 	.block-item(type="text")
 		.item
 			.text NHẬN BÁO GIÁ
@@ -12,6 +15,8 @@
 		.item.css-selector
 			.icon
 				img.svg(data-src="./assets/icons/phone.svg", alt="PHONE")
+			.text-hover
+				h5 0938 188 329
 	.block-item
 		.item.css-selector
 			.icon
