--- a/src/_templates/index/i-4.pug
+++ b/src/_templates/index/i-4.pug
@@ -168,10 +168,10 @@ section.index-4
 		.container.map-index-4-container
 			.block-content
 				.content
-					h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
+					h2.wow.fadeInDown(data-wow-delay=".2s") TIỆN ÍCH ĐẲNG CẤP 5 SAO
 						br
 						| DÀNH CHO GIỚI THƯỢNG LƯU
-					.desc
+					.desc.wow.fadeInLeft(data-wow-delay=".6s")
 						ul
 							li Tại West Lakes Golf & Villas, chủ nhân trải nghiệm tiêu chuẩn sống xanh đầy đủ tiện nghi giữa lòng đô thị sân Golf hiện đại.
 							li Tổ hợp tiện ích nội khu được đầu tư và thiết kế đồng bộ luôn sẵn sàng phục vụ cộng đồng cư dân tinh hoa: Sân golf chuẩn quốc tế 27 lỗ, clubhouse hiện đại, công viên nước, trường học, bệnh viện quốc tế, spa thời thượng, phòng gym đẳng cấp…
