--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -21,3 +21,5 @@
 		.item.css-selector
 			.icon
 				img.svg(data-src="./assets/icons/download.svg", alt="PHONE")
+			.text-hover
+				h5 tải brochure
