--- a/src/_templates/_layout/_layout.pug
+++ b/src/_templates/_layout/_layout.pug
@@ -24,6 +24,8 @@ html(lang="en")
 		block footer
 			include _footer
 		#overlay
+		#back-to-top
+			img(src="./assets/icons/back-top.png", alt="")
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
 		block scripts
