--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -12,6 +12,27 @@ body {
 	}
 }
 
+#back-to-top {
+	cursor: pointer;
+	position: fixed;
+	bottom: 25px;
+	right: 15px;
+	z-index: 300;
+	opacity: 0;
+	pointer-events: none;
+	transition: .3s all ease-in-out;
+
+	&.active {
+		pointer-events: visible;
+		opacity: 1;
+		pointer-events: static;
+	}
+
+	@media (max-width: 1024.98px) {
+		display: none;
+	}
+}
+
 #overlay {
 	cursor: pointer;
 	opacity: 0;
