--- a/src/scss/_layouts/fixed-menu.scss
+++ b/src/scss/_layouts/fixed-menu.scss
@@ -130,6 +130,7 @@
 			opacity: 0;
 			visibility: hidden;
 			transition: .3s all ease-in-out;
+			text-transform: uppercase;
 
 			&:after {
 				position: absolute;
