--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -29,3 +29,9 @@ header
 			.search
 				.icon
 					img.lazyload.blur-up(data-src="./assets/icons/search.png", alt="SEARCH")
+				.block-form
+					form
+						.form-group
+							input.form-control(type="search" placeholder="Tìm kiếm")
+							button
+								img.lazyload.blur-up(data-src="./assets/icons/search-white.png", alt="SEARCH")
