--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -19,6 +19,16 @@
 			position: relative;
 
 			@media (min-width: 1025px) {
+				&:after{
+					content: '';
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					mix-blend-mode: multiply;
+					background-image: url("../assets/images/background/item-index-6.png");
+				}
 				.content {
 					position: absolute;
 					top: 50%;
