--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -65,7 +65,7 @@
 						}
 					}
 
-					li+li {
+					li + li {
 						margin-top: 20px;
 					}
 				}
@@ -324,7 +324,8 @@
 				}
 			}
 
-			@media (max-width: 1024.98px) {}
+			@media (max-width: 1024.98px) {
+			}
 		}
 
 		@media (min-width: 1025px) {
@@ -429,7 +430,9 @@
 }
 
 .dialog {
-	display: none;
+	opacity: 0;
+	transition: all .3s ease;
+	transform: scale(0.7);
 
 	.dialog-wrapper {
 		position: relative;
@@ -439,9 +442,11 @@
 		border-radius: 24px;
 		padding: 0 10px;
 		min-height: 48px;
-		background: linear-gradient(306deg,
-				rgba(213, 184, 95, 1) 36%,
-				rgba(227, 227, 227, 1) 100%);
+		background: linear-gradient(
+			306deg,
+			rgba(213, 184, 95, 1) 36%,
+			rgba(227, 227, 227, 1) 100%
+		);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d5b85f", endColorstr="#e3e3e3", GradientType=1);
 
 		&:before {
@@ -482,6 +487,11 @@
 		}
 	}
 
+	&.show {
+		opacity: 1;
+		transform: scale(1);
+	}
+
 	&.center {
 		transform: translateX(-50%);
 
@@ -499,6 +509,10 @@
 				right: 52px;
 			}
 		}
+	}
+
+	&.show {
+		opacity: 1 !important;
 	}
 }
 
