--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -77,6 +77,22 @@ textarea {
 		height: 100%;
 	}
 
+	&[data-bg-multiply] {
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-size: 100% 100%;
+			background-position: center;
+			width: 100%;
+			height: 100%;
+			background-blend-mode: multiply;
+		}
+	}
+
 	&[full-screen] {
 		height: 90vh;
 		width: 100%;
