--- a/src/_templates/index/i-1.pug
+++ b/src/_templates/index/i-1.pug
@@ -1,3 +1,3 @@
-section.index-1(full-screen)
+section.index-1
 	video#player(playsinline controls autoplay muted loop)
 		source(src='./assets/videos/index-1.mp4', type='video/mp4')
